src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Connexin Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Composing Proposal</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Billing_Commencement_Date__c</fullName>
        <label>Billing Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <inlineHelpText>Won / Lost Reason</inlineHelpText>
        <label>Close Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <inlineHelpText>Contract Length in Months</inlineHelpText>
        <label>Contract Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>The type of service the opportunity is interested in.</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <inlineHelpText>Gross Profit Margin</inlineHelpText>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Update__c</fullName>
        <inlineHelpText>The Latest Update on the Opportunity Status (this could be as simple as a cut//past job from the Salesforce Activity)</inlineHelpText>
        <label>Weekly Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_1_AOV__c</fullName>
        <inlineHelpText>First Year Annual Order Value</inlineHelpText>
        <label>Year 1 AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <businessProcess>Connexin Sales Process</businessProcess>
        <label>Master</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AOV_Equal_TCV_when_Contract_Length_12</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Contract_Length__c &lt;= 12,  Year_1_AOV__c != Amount)</errorConditionFormula>
        <errorDisplayField>Year_1_AOV__c</errorDisplayField>
        <errorMessage>Year 1 AOV must equal TCV if the Contract Length is less than 12 Months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AOV_Less_Than_TCV</fullName>
        <active>true</active>
        <errorConditionFormula>Year_1_AOV__c &gt; Amount</errorConditionFormula>
        <errorDisplayField>Year_1_AOV__c</errorDisplayField>
        <errorMessage>Year 1 AOV cannot be more than Opportunity TCV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Close_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsClosed, ISBLANK( Close_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Close_Reason__c</errorDisplayField>
        <errorMessage>Close Reason must be specified when Opportunity is Closed</errorMessage>
    </validationRules>
</CustomObject>